--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header h2 #hoverFix:hover {
   color: #EFF253;
 }
 
-#container {
+#nav-container {
   font-size: 0px;
   background: rgba(200,100,100, 0.6);
   padding: 20px;
