--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
 body {
+  cursor: default;
   margin-top: 0px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0px;
-
-
   background-image: url("placeholder2.jpg");
   background-repeat: no-repeat;
-  /* background-position: center center; */
+  background-position: center center;
   /* have background fill container */
   background-size: cover;
 
   /* gets rid of scroll bar and overflowed content div etc */
   overflow: hidden;
-
 }
 
 /*
@@ -26,58 +24,58 @@ body {
          url('hickoryjack-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
 }
 
 header {
-  display: inline;
-
+  /* float: left; */
 }
 
 header h2 {
-  /* background: rgba(18,25,92, 0.6); */
   background: rgba(0,0,0, 0.6);
   /* using percentages to make values fluid (ideally) */
-  padding: 2.5%;
-  width: 100%;
+  padding: 2.0%;
   margin-bottom: 0%;
-  /* border: 1px solid white; */
-  /* text-align: center; */
-  font-size: 65px;
-  margin-top: 0px;
+  /* font-size: 65px; */
+  font-size: 4.1em;
+  margin-top: 0%;
+  width: 100%; /* fills container with transparent background */
   /* change font */
   font-family: 'hickory_jackregular';
   /* text-shadow: 2px 2px #12195C; */
   text-shadow: 2px 2px black;
-  color: #F9FCC0;
+  /* color: #F9FCC0; */
+  color: white;
   /* remove bold from heading */
   font-weight: normal;
+
 }
 
-/* before I added span with id hoverFix, the whole header h2 block was
-being highlighted.  This corrected that so just the logo would highlight. */
-header h2 #hoverFix:hover {
-  /* color: #EFF253; */
-  color: #FEC361;
+nav {
+  display: inline;
 }
-
 
 .nav-ul {
   display: inline;
+   /* float: right; */
+   overflow: visible;
+   margin-left: auto;
+   margin-right: auto;
+   float:right;
+   margin-top: -2%;
+
+   padding-right: 20px;
 
 }
 
 .nav-ul li {
-
-  color: white;
-  opacity: 0.5;
-  font-size: 1.2em;
-
-
+  /* background-color: blue; */
   display: inline;
-  padding: 5px;
-  /* margin-left: 0px; */
-  /* margin-right: 0px; */
+  /* float: right; */
+  color: white;
+  opacity: 0.8;
+  font-size: 1.4em;
+  padding-right: 40px;
+
 }
 
 /*
@@ -92,21 +90,23 @@ header h2 #hoverFix:hover {
 
 .nav-ul li:hover {
    /* background-color: tomato; */
-   opacity: 0.7;
-   background-color: brown;
-   /* text-transform: capitalize; */
-   cursor:help;
+   opacity: 0.9;
+   color: orange;
+   text-decoratioin: none;
+   text-shadow: 1px 1px black;
+
 }
 
 #main-container {
   margin-top: 0px;
   padding: 100px;
   background: rgba(255,255,255, 0.5);
-  padding-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: left;
-  line-height: 1.5;
-  font-family: cursive;
 
+  line-height: 1.3;
+
+
+}
+
+#main-container p {
+  /* text-align: jutstify; */
 }
