--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 0px;
-  background-image: url("placeholder2.jpg");
+  /* background-image: url("placeholder2.jpg"); */
+  background-image: url("placeholder1.png");
   background-repeat: no-repeat;
   background-position: center center;
   /* have background fill container */
   background-size: cover;
 
+
   /* gets rid of scroll bar and overflowed content div etc */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /*
@@ -27,7 +29,8 @@ body {
 }
 
 header {
-  /* float: left; */
+
+
 }
 
 header h2 {
@@ -38,7 +41,7 @@ header h2 {
   /* font-size: 65px; */
   font-size: 4.1em;
   margin-top: 0%;
-  width: 100%; /* fills container with transparent background */
+
   /* change font */
   font-family: 'hickory_jackregular';
   /* text-shadow: 2px 2px #12195C; */
@@ -49,6 +52,11 @@ header h2 {
   font-weight: normal;
 
 }
+
+h3 {
+  margin: 0px;
+}
+
 
 nav {
   display: inline;
@@ -99,14 +107,31 @@ nav {
 
 #main-container {
   margin-top: 0px;
-  padding: 100px;
-  background: rgba(255,255,255, 0.5);
+  padding-top: 40px;
 
+  background: rgba(255,255,255, 0.4);
   line-height: 1.3;
-
+  border-top: 3px solid black;
 
 }
 
-#main-container p {
-  /* text-align: jutstify; */
+.foodPics {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  border-top: 2px solid black;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 50px;
+}
+
+.foodPics img {
+  padding: 5px;
+  opacity: 0.8;
+  width: 170px;
+  height: 170px;
+}
+
+.foodPics img:hover {
+  opacity: 1.0;
+
 }
